--- a/dropdown/src/style.css
+++ b/dropdown/src/style.css
@@ -1,84 +1,164 @@
-*{
-    margin: 0;
-    padding: 0;
+
+* {
     box-sizing: border-box;
+    margin: 0;
+    text-decoration: none;
 }
-body{
+
+h1, h2, h3, h4, h5, h6, p {
+    margin: 0;
+}
+
+body {
     display: flex;
     align-items: center;
-    justify-content: center;
+    flex-direction: column;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
     height: 100vh;
-    font-family: 'Inter';
-}
-.container{
-    display: grid;
     width: 120%;
-    height: 550px;
-   grid-template-rows: 100px auto;
 }
-.nav{
-    background: #21222a;
+
+/* NAV styles */
+
+nav {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    font-size: 1.2em;
-    padding: 0 30px;
+    background-color: #ffffff;
+    padding: 30px 25px;
+    height: 60px;
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
+    z-index: 1;
 }
-    .nav-left span:nth-child(2){
-    padding-left: 8px;
-    color: #61dafb;
-    font-weight: 700;
+
+nav.dark {
+    background-color: #21222A;
 }
-.nav-bar{
-    color: #fff;
-    font-weight: bold;
+
+.nav--logo_icon {
+    width: 30px;
+    margin-right: 10px;
 }
-main{
-    position: relative;
-    padding-top: 50px;
-    padding-left: 30px;
-    background: #282d35;
-    color: #fff;
-    background-image: url(./images/reactjs-icon\ 2.png);
+
+.nav--logo_text {
+    color: #61DAFB;
+    margin-right: auto;
+}
+
+.nav--title {
+    color: #DEEBF8;
+}
+
+.toggler {
+    display: flex;
+    align-items: center;
+}
+
+.toggler p {
+    font-size: 0.625rem;
+    font-weight: 600;
+}
+
+.toggler--slider {
+    width: 25px;
+    height: 13px;
+    background-color: #2B283A;
+    border-radius: 2rem;
+    margin-inline: 7px;
+    cursor: pointer;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    border: 1px solid black;
+    box-sizing: content-box;
+}
+
+nav.dark .toggler--slider {
+    border-color: white;
+    background-color: #F5F5F5;
+}
+
+.toggler--slider--circle {
+    height: 13px;
+    width: 13px;
+    background-color: white;
+    border-radius: 50%;
+}
+
+nav.dark .toggler--slider--circle {
+    background-color: black;
+}
+
+.toggler--light {
+    color: #2B283A;
+}
+
+nav.dark .toggler--light {
+    color: #918E9B;
+}
+
+.toggler--dark {
+    color: #D5D4D8;
+}
+
+nav.dark .toggler-dark {
+    color: #FFFFFF;
+}
+
+nav.dark .toggler--slider {
+    justify-content: flex-end;
+}
+
+/* MAIN styles */
+main {
+    padding: 57px 27px;
+    background-image: url("./images/react-icon-light.png"); 
     background-repeat: no-repeat;
-    background-position: right 75%;
+    background-position: right center;
+    flex: 1 1 auto;
+    background-color: white;
+    color: #2B283A;
+     box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
 }
-h1{
-    font-weight: 700;
-    font-size: 2em;
+
+main.dark {
+    background-image: url("./images/react-icon-dark.png"); 
+    background-color: #282D35;
+    color: white;    
 }
-main ul{
-    padding-top: 25px;
-    font-size: 1.2em;
-     list-style: none;
-     padding-left: 55px;
+
+.main--title {
+    margin: 0;
+    font-size: 39px;
+    letter-spacing: -0.05em;
 }
-li span{
-    display: block;
-    margin-top: -33px;
+
+.main--facts {
+    margin-top: 46px;
+    max-width: 400px;
 }
-main ul li::before{
-    content: '\2022';
-    font-size: 2em;
-    width: 1em;
-    color: #61dafb;
-    margin-left: -1em;
-    display: inline-block;
+
+.main--facts > li {
+    line-height: 19px;
+    padding-block: 10px;
 }
-.nav-left{
-    display: flex;
-    align-items: center;
+
+.main--facts > li::marker {
+    font-size: 1.4rem;
+    color: #61DAFB;
 }
-.img-react{
-    width: 150px;
-}
-.img-logo{
-    width:40px; 
-    height :40px; 
-}
+/* FOOTER sytle */
+
 footer{
-    background: #999;
-    /* height: 80px; */
+    height: 80px;
+    background: #fff;
+}
+footer.dark {
+    background-color: #21222A;
+    color: white; 
 }
 .nav-footer{
     height: 100%;
@@ -87,6 +167,7 @@ footer{
     justify-content: space-around;
     padding: 0 30px;
     flex-direction: column;
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.25);
 }
 .nav-bar-footer{
     list-style: none;
@@ -94,10 +175,19 @@ footer{
     justify-content: space-evenly;
     width: 100%;
 }
-.nav-bar-footer li:hover{
+.nav-bar-footer li a{
     cursor: pointer;
-    color: #f3f3f3;
+    color: #2B283A;
+}
+.nav-bar-footer li a.dark{
+  color: white;
+}
+.nav-bar-footer li a:hover{
+    color: #999;
 }
 .nav-footer p{
-    color: #f3f3f3;
+    color: #2B283A;
+}
+.nav-footer p.dark{
+  color: white;
 }
